--- a/src/app/form/adoption-form/adoption-form.component.html
+++ b/src/app/form/adoption-form/adoption-form.component.html
@@ -12,36 +12,36 @@
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <mat-form-field class="example-full-width">
-                        <input matInput formControlName="Nombre" placeholder="Nombre del adoptante">
+                        <input matInput formControlName="Nombre" placeholder="Nombre del adoptante" required>
                     </mat-form-field>
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <mat-form-field class="example-full-width">
-                        <input matInput formControlName="Apellido" placeholder="Apellido del adoptante">
+                        <input matInput formControlName="Apellido" placeholder="Apellido del adoptante" required>
                     </mat-form-field>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-12 col-md-4">
                     <mat-form-field class="example-full-width">
-                        <input matInput formControlName="NoDPI" placeholder="No DPI">
+                        <input matInput formControlName="NoDPI" placeholder="No DPI" required>
                     </mat-form-field>
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <mat-form-field class="example-full-width">
-                        <input matInput type="email" formControlName="Email" placeholder="Correo Electrónico">
+                        <input matInput type="email" formControlName="Email" placeholder="Correo Electrónico" required>
                     </mat-form-field>
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <mat-form-field class="example-full-width">
-                        <input matInput type="tel" formControlName="Telefono" placeholder="Teléfono">
+                        <input matInput type="tel" formControlName="Telefono" placeholder="Teléfono" required>
                     </mat-form-field>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-12 col-md-6">
                     <mat-form-field class="example-full-width">
-                        <input matInput type="tel" formControlName="Celular" placeholder="Celular">
+                        <input matInput type="tel" formControlName="Celular" placeholder="Celular" required>
                     </mat-form-field>
                 </div>
                 <div class="col-sm-12 col-md-6">
@@ -68,13 +68,13 @@
                 </div>
                 <div class="col-sm-12 col-md-6">
                     <mat-form-field class="example-full-width">
-                        <input matInput type="number" formControlName="NoPersonasEnCasa" placeholder="numero de personas en casa">
+                        <input matInput type="number" formControlName="NoPersonasEnCasa" placeholder="numero de personas en casa" required>
                     </mat-form-field>
                 </div>
                 <!-- <div>listado de personas</div> -->
                 <div class="col-sm-12 col-md-6">
                     <mat-form-field class="example-full-width">
-                        <input matInput type="number" formControlName="NoPerrosEnCasa" placeholder="numero de perros en casa">
+                        <input matInput type="number" formControlName="NoPerrosEnCasa" placeholder="numero de perros en casa" required>
                     </mat-form-field>
                 </div>
                 <!-- <div>listado de perros</div> -->
@@ -105,7 +105,7 @@
             <div class="row">
                 <div class="col-sm-6 col-md-12">
                     <mat-form-field class="example-full-width">
-                        <input matInput formControlName="DescripcionDelLugarADormir" placeholder="breve descripción del lugar donde dormira">
+                        <input matInput formControlName="DescripcionDelLugarADormir" placeholder="breve descripción del lugar donde dormira" required>
                     </mat-form-field>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="col-sm-6 col-md-12">
                     <mat-form-field class="example-full-width">
-                        <input matInput formControlName="RazonDeAdopcion" placeholder="Razón por la que quieres adoptar">
+                        <input matInput formControlName="RazonDeAdopcion" placeholder="Razón por la que quieres adoptar" required>
                     </mat-form-field>
                 </div>
             </div>
@@ -146,12 +146,12 @@
             <div class="row">
                 <div class="col-sm-12 col-md-6">
                     <mat-form-field class="example-full-width">
-                        <input matInput formControlName="HorarioDeActividades" placeholder="¿Cuales son tus horarios de trabajo o estudio?">
+                        <input matInput formControlName="HorarioDeActividades" placeholder="¿Cuales son tus horarios de trabajo o estudio?" required>
                     </mat-form-field>
                 </div>
                 <div class="col-sm-12 col-md-6">
                     <mat-form-field class="example-full-width">
-                        <input matInput formControlName="PersonaResponsableEnHorasNoHabiles" placeholder="¿Quien estará con la mascota en horas no habiles?">
+                        <input matInput formControlName="PersonaResponsableEnHorasNoHabiles" placeholder="¿Quien estará con la mascota en horas no habiles?" required>
                     </mat-form-field>
                 </div>
                 <div class="col-sm-12 col-md-12">
