cambio de titulo a articulos

--- a/src/app/admin/articles/article-editor/article-editor.component.html
+++ b/src/app/admin/articles/article-editor/article-editor.component.html
@@ -4,7 +4,7 @@
             <div class="col-sm-12 col-md-12  col-lg-12">
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title">Articulo</h4>
+                        <h4 class="card-title">Articulo informativo</h4>
                         <p class="card-category">Agregar nuevo articulo</p>
                     </div>
                     <div class="card-body">
