--- a/src/app/landing/home/home.component.html
+++ b/src/app/landing/home/home.component.html
@@ -98,7 +98,7 @@
                     <h4>Articulos</h4>
                     <p>Revisa los articulos que las personas han publicado, puede existir alguno de tu interes</p>
                     <button (click)="GoTo('/page/listado-articulos')" type="button" mat-raised-button
-                        class="btn btn-info">Articulos</button>
+                        class="btn btn-info">Articulos informativos</button>
                 </div>
             </div>
         </div>
