--- a/src/app/landing/Article/article-list/article-list.component.html
+++ b/src/app/landing/Article/article-list/article-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12 center">
-            <h1 class="title">Articulos</h1>
+            <h1 class="title">Articulos informativos</h1>
         </div>
         <div class="col-sm-12">
             <div class="contain">
