--- a/src/app/layouts/landing-layout/landing-layout.component.html
+++ b/src/app/layouts/landing-layout/landing-layout.component.html
@@ -22,7 +22,7 @@
           <a class="nav-link" (click)="GoTo('/page/listado-consultas')">Consultas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" (click)="GoTo('/page/listado-articulos')">Articulos</a>
+          <a class="nav-link" (click)="GoTo('/page/listado-articulos')">Articulos informativos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" (click)="GoTo('/session/singin')">Iniciar sessión</a>
@@ -49,7 +49,7 @@
         <a class="nav-link" (click)="GoTo('/page/listado-consultas')">Consultas</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="GoTo('/page/listado-articulos')">Articulos</a>
+        <a class="nav-link" (click)="GoTo('/page/listado-articulos')">Articulos informativos</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" (click)="GoTo('/session/singin')">Iniciar sessión</a>
