--- a/src/app/landing/home/home.component.html
+++ b/src/app/landing/home/home.component.html
@@ -18,6 +18,11 @@
                         <p>En esta plataforma podras realizar adopciones en linea, en tan pocos clicks, directo a la
                             asociación encargada, con tan solo la espera de la respuesta de este pronto podras disfrutar
                             de tu mascota</p>
+                            <ul>
+                                <li>Busca la mascota que deceas adoptar</li>
+                                <li>Llena el formulario de adopción de mascota</li>
+                                <li>Espera, y pronto tendras noticia de tu solicitud</li>
+                            </ul>
                         <button (click)="GoTo('/page/adopcion')" type="button" mat-raised-button
                             class="btn btn-info">Adopta</button>
                     </div>
