--- a/src/app/landing/Company/company-profile/company-profile.component.html
+++ b/src/app/landing/Company/company-profile/company-profile.component.html
@@ -22,6 +22,7 @@
                         <p>¿quieres realizar una consulta con esta empresa?</p>
                         <textarea  [formControl]="Message" class="form-control" matInput placeholder="Escribir un comentario" rows="5"></textarea>
                         <button (click)="contactToCopmany()" type="button" mat-raised-button class="btn btn-info">Enviar</button>
+                        <button (click)="CreateAppointment()" type="button" mat-raised-button class="btn btn-info">Solicitar una cita</button>
                     </div>
                 </div>
             </div>
