se areglan tipos de datos y otros ajustes

--- a/src/app/landing/Company/copmany-list/copmany-list.component.html
+++ b/src/app/landing/Company/copmany-list/copmany-list.component.html
@@ -11,7 +11,7 @@
                             <img [src]="company.Logo" alt="">
                             <div class="body-cart">
                                 <h5>{{company.Name}}</h5>
-                                <h5>{{company.AsociationType}}</h5>
+                                <h5>{{company.AsociationType.Name}}</h5>
                             </div>
                         </div>
                     </div>
