--- a/src/app/landing/Company/company-profile/company-profile.component.html
+++ b/src/app/landing/Company/company-profile/company-profile.component.html
@@ -11,7 +11,7 @@
                     <div class="row">
                         <p>{{company.Description}}</p>
                         <br>
-                        <h5>tipo {{company.AsociationType}}</h5>
+                        <h5>tipo {{company.AsociationType.Name}}</h5>
                     </div>
                 </div>
             </div>
