--- a/src/app/admin/admin-components/table-list/table-list.component.html
+++ b/src/app/admin/admin-components/table-list/table-list.component.html
@@ -1,6 +1,6 @@
 <div class="col-sm-12">
     <div class="form-group">
-      <input type="text" value="" [(ngModel)]="filterOption" placeholder="Buscar" class="form-control" />
+      <input type="text" value="" [(ngModel)]="filterOption" placeholder="Busca por cualquiera de los campos en la tabla" class="form-control" />
     </div>
   </div>
   <div class="card-content table-responsive table-full-width">
