--- a/src/app/admin/privateConsultations/private-consultations/private-consultations.component.html
+++ b/src/app/admin/privateConsultations/private-consultations/private-consultations.component.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="card-body">
                         <div *ngIf="CompanyConsults">
-                            <app-table-list *ngIf="CompanyConsults.length != 0" [Data]="CompanyConsults"></app-table-list>
+                            <app-table-list *ngIf="CompanyConsults.length != 0" Title="Buscar por fecha de la cita" [Data]="CompanyConsults"></app-table-list>
                         </div>
                         <div *ngIf="CompanyConsults" class="col-sm-12 center">
                             <div *ngIf="CompanyConsults.length == 0" class="titleIfNotData">Aun no has recibido consultas de los usuarios</div>
@@ -45,7 +45,7 @@
                     </div>
                     <div class="card-body">
                         <div *ngIf="Userconsults">
-                            <app-table-list *ngIf="Userconsults.length != 0" [Data]="Userconsults"></app-table-list>
+                            <app-table-list *ngIf="Userconsults.length != 0" Title="Buscar por fecha de la cita" [Data]="Userconsults"></app-table-list>
                         </div>
                         <div *ngIf="Userconsults" class="col-sm-12 center">
                             <div *ngIf="Userconsults.length == 0" class="titleIfNotData">Aun no has hecho una cita, si necesitas realizar una, busca una empresa <a [routerLink]="['/page', 'istado-empresas']">haciendo click aqui</a> y consulta lo que necesites</div>
