--- a/src/app/admin/profile/profile/profile.component.html
+++ b/src/app/admin/profile/profile/profile.component.html
@@ -17,7 +17,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <mat-form-field class="example-full-width">
-                                        <input matInput formControlName="FullName" placeholder="Nombre completo"
+                                        <input matInput formControlName="FullName" (keypress)="keyPress($event)" placeholder="Nombre completo"
                                             type="text" required>
                                     </mat-form-field>
                                 </div>
@@ -25,7 +25,7 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <mat-form-field class="example-full-width">
-                                        <input matInput formControlName="FullLastName" placeholder="Apellidos completos"
+                                        <input matInput formControlName="FullLastName" (keypress)="keyPress($event)" placeholder="Apellidos completos"
                                             type="text" required>
                                     </mat-form-field>
                                 </div>
@@ -69,7 +69,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <mat-form-field class="example-full-width">
-                                            <input matInput formControlName="Name" placeholder="Nombre" required>
+                                            <input matInput formControlName="Name" (keypress)="keyPress($event)" placeholder="Nombre" required>
                                         </mat-form-field>
                                     </div>
                                     <div class="col-md-12">
